--- a/DeltaUML/SequenceDiagramService/SequenceDiagramService.csproj
+++ b/DeltaUML/SequenceDiagramService/SequenceDiagramService.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>SequenceDiagramControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequenceDiagramInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DeltaUMLSdk\DeltaUMLSdk.csproj">
